[package]
edition = "2021"
name = "magical-signage"
version = "0.1.0"
license = "MIT"


[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.1" }
embassy-usb-logger = { version = "0.1.0" }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", version = "3.0.0-alpha.4", features = ["lorawan-radio"] }
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", version = "0.12", features = ["embassy-time", "defmt"] }
lorawan = { git = "https://github.com/lora-rs/lora-rs.git", version = "0.8.0", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.25.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
st7789 = "0.7.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.2", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8.0"
usbd-hid = "0.7.0"

embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2.0" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", rev = "a083583" }

dotenv-hex = { path = "./dotenv_hex" }

[profile.release]
debug = 2
